<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="default_discoverable_timeout">twomin</string>
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="bluetooth_advanced_settings">Advanced settings</string>
    <string name="bluetooth_profile_ftp">File transfer</string>
    <string name="bluetooth_ftp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_ftp_profile_summary_connected">Connected to file transfer</string>
    <string name="mtp_transfer_unmount_error_text">SD card can not be unmounted during file transferring</string>
    <string name="mtp_transfer_erase_error_text">SD card can not be erased during file transferring</string>
    <string name="launch_error">"Couldn't launch the application!"</string>
    <string name="dlg_confirm_unmount_usb_title">Unmount USB storage?</string>
    <string name="dlg_confirm_unmount_usb_text">If you unmount the USB storage, some apps you are using will stop and may be unavailable until you remount the USB storage.</string>
    <string name="dlg_error_unmount_usb_title" />
    <string name="dlg_error_unmount_usb_text">"Couldn't unmount USB storage. Try again later."</string>
    <string name="unmount_usb_inform_text">USB storage will be unmounted.</string>
    <string name="sd_eject_usbstorage">Unmount USB storage</string>
    <string name="sd_eject_usbstorage_summary">Unmount USB storage so you can safely remove it</string>
    <string name="sd_mount_usbstorage">Mount USB storage</string>
    <string name="sd_insert_usb_summary">Insert USB storage for mounting</string>
    <string name="usb_ums_title">USB storage</string>
    <string name="usb_ums_summary">XP recommended. Lets you transfer files between your computer and your Android device.</string>
    <string name="usb_charge_title">Charge only</string>
    <string name="usb_charge_summary">Stop all USB fuctions.Lets you speed up USB charging and decrease power consumption.</string>
    <string name="NI_Request_ID">Requestor ID</string>
    <string name="NI_Request_ClientName">Client Name</string>
    <string name="agps_str_verify">Verification</string>
    <string name="agps_str_notify">Notification</string>
    <string name="EM_NotifyDialog_title">EM Notify</string>
    <string name="agps_OK">OK</string>
    <string name="audio_profile_settings_title">Audio profiles</string>
    <string name="software_update">Software update service</string>
    <string name="software_updates_more_title">Software updates</string>
    <string name="software_updates_more_summary">Check for new version software</string>
    <string name="software_updates_scomo_summary">Check new version for application</string>
    <string name="scomo_settings_title">Software update service</string>
    <string name="landscape_launcher_title">Landscape Launcher</string>
    <string name="tvout_settings">TV out</string>
    <string name="tvout_settings_summary">TV out settings</string>
    <string name="hdmi_settings">HDMI settings</string>
    <string name="hdmi_settings_summary">Click to configure HDMI</string>
    <string name="display_settings_scences_title">Scenes</string>
    <string name="mtk_thememanager_title">Theme</string>
    <string name="gemini_sim_management_title">SIM management</string>
    <string name="trust_access_points">Default credible access points</string>
    <string name="configed_access_points">Credible access points</string>
    <string name="new_access_points">Unknown access points</string>
    <string name="apn_list_category_title">Access point list</string>
    <string name="data_conn_category_title">Data connection</string>
    <string name="data_enabler_title">Data enabled</string>
    <string name="data_enabler_summary">Enable data access over Mobile network</string>
    <string name="schedule_power_on_off_settings_title">Scheduled power on &amp; off</string>
    <string name="rcse_settings_title">RCS-e settings</string>
    <string name="usb_sharing_title">USB Internet</string>
    <string name="usb_sharing_summary">Sharing Windows PC internet via USB cable</string>
    <string name="display_personalize">Personalize</string>
    <string name="display_default">Display</string>
    <string name="lock_screen_notifications_title">Lock screen notifications</string>
    <string name="lock_screen_notifications_summary">Show notifications on lock screen</string>
    <string name="lock_screen_style_title">Lock screen style</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="proxy_settings_title">Proxy settings</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="radio_controls_title">More…</string>
    <string name="wireless_networks_settings_title">Wireless &amp; networks</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="location_settings_title">Location access</string>
    <string name="security_settings_title">Security</string>
    <string name="bluetooth_settings_title">Bluetooth</string>
    <string name="bluetooth_dock_settings_a2dp">For music and media</string>
    <string name="wifi_display_settings_title">Wireless display</string>
    <string name="nfc_quick_toggle_title">NFC</string>
    <string name="nfc_quick_toggle_summary">Allow data exchange when the phone touches another device</string>
    <string name="android_beam_settings_title">Android Beam</string>
    <string name="nsd_quick_toggle_title">Network service discovery</string>
    <string name="nsd_quick_toggle_summary">Allow apps on other devices to discover apps on this device</string>
    <string name="wifi_settings_category">Wi-Fi settings</string>
    <string name="wifi_settings_title">Wi-Fi</string>
    <string name="wifi_notify_open_networks">Network notification</string>
    <string name="wifi_notify_open_networks_summary">Notify me when an open network is available</string>
    <string name="wifi_poor_network_detection">Avoid poor connections</string>
    <string name="wifi_poor_network_detection_summary">"Don't use a Wi-Fi network unless it has a good Internet connection"</string>
    <string name="wifi_setting_sleep_policy_title">Keep Wi-Fi on during sleep</string>
    <string name="wifi_suspend_optimizations">Wi-Fi optimization</string>
    <string name="wifi_suspend_optimizations_summary">Minimize battery usage when Wi-Fi is on</string>
    <string name="wifi_add_network">Add network</string>
    <string name="wifi_advanced_titlebar">Advanced Wi-Fi</string>
    <string name="wifi_setting_frequency_band_title">Wi-Fi frequency band</string>
    <string name="wifi_setting_frequency_band_summary">Specify the frequency range of operation</string>
    <string name="sound_settings">Sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="all_volume_title">Volumes</string>
    <string name="musicfx_title">Music effects</string>
    <string name="notification_sound_title">Default notification sound</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="notification_sound_dialog_title">Default notification sound</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="sound_effects_enable_title">Touch sounds</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="haptic_feedback_enable_title">Vibrate on touch</string>
    <string name="vibrate_when_ringing_title">Vibrate when ringing</string>
    <string name="dock_settings">Dock</string>
    <string name="dock_audio_settings_title">Audio</string>
    <string name="dock_sounds_enable_title">Dock insert sound</string>
    <string name="account_settings">Accounts</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="screensaver_settings_title">Daydream</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">%1$s</string>
    <string name="dialog_title_font_size">Font size</string>
    <string name="system_update_settings_list_item_title">System updates</string>
    <string name="system_update_settings_list_item_summary" />
    <string name="firmware_version">Android version</string>
    <string name="model_number">Model number</string>
    <string name="fcc_equipment_id">Equipment ID</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="selinux_status">SELinux status</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Phone number, signal, etc.</string>
    <string name="storage_settings">Storage</string>
    <string name="tether_settings_title_all">Tethering &amp; portable hotspot</string>
    <string name="network_settings_title">Mobile networks</string>
    <string name="about_settings">About phone</string>
    <string name="legal_information">Legal information</string>
    <string name="regulatory_information">Regulatory information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="settings_safetylegal_title">Safety information</string>
    <string name="applications_settings">Apps</string>
    <string name="language_settings">Language &amp; input</string>
    <string name="development_settings_title">Developer options</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="power_usage_summary_title">Battery</string>
    <string name="vpn_settings_title">VPN</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="privacy_settings">Backup &amp; reset</string>
    <string name="sound_category_call_ringtone_vibrate_title">Call ringtone &amp; vibrate</string>
    <string name="sound_category_system_title">System</string>
    <string name="add_account_label">Add account</string>
    <string name="wimax_settings">4G settings</string>
    <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
    <string name="data_usage_summary_title">Data usage</string>
    <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
    <string name="selinux_status_enforcing">Enforcing</string>
    <string name="user_settings_title">Users</string>
    <string name="cell_broadcast_settings">Cell broadcasts</string>
    <string name="cell_broadcast_settings_summary">Select the types of emergency alerts to display.</string>
    <string name="header_category_interface">CUSTOMIZATION</string>
    <string name="launcher_settings_title">Launcher</string>
    <string name="themes_settings_title">Themes</string>
    <string name="allegro_settings_title">AllegroROM Settings</string>
    <string name="about_rom_title">About ROM</string>
    <string name="about_rom_summary">Version, author, etc</string>
</resources>