<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/wifi_advanced_titlebar"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_notify_open_networks" android:key="notify_open_networks" android:summary="@string/wifi_notify_open_networks_summary" />
    <ListPreference android:persistent="false" android:entries="@array/wifi_sleep_policy_entries" android:title="@string/wifi_setting_sleep_policy_title" android:key="sleep_policy" android:entryValues="@array/wifi_sleep_policy_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_poor_network_detection" android:key="wifi_poor_network_detection" android:summary="@string/wifi_poor_network_detection_summary" />
    <ListPreference android:persistent="false" android:entries="@array/wifi_frequency_band_entries" android:title="@string/wifi_setting_frequency_band_title" android:key="frequency_band" android:summary="@string/wifi_setting_frequency_band_summary" android:entryValues="@array/wifi_frequency_band_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_suspend_optimizations" android:key="suspend_optimizations" android:summary="@string/wifi_suspend_optimizations_summary" />
</PreferenceScreen>